# dbt-migrator

./: .gitignore  Cargo.toml  README.md  migrate_config.example.yml  pyproject.toml
.github/actions/build-sdist/: action.yaml
.github/actions/build-wheels/: action.yml
.github/actions/rust-test/: action.yml
.github/workflows/: CI.yml  Release.yml
examples/: run_migration.rs
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  python.rs
src/config/: mod.rs  schema.rs
src/dbt/: index.rs  metadata.rs  mod.rs  project.rs
src/pipeline/: runner.rs
src/sql/: dialects.rs  mod.rs  normalizer.rs  report.rs  rewriter.rs
tests/: integration_test.rs
tests/fixtures/demo_project/: dbt_project.yml
tests/fixtures/demo_project/sql_legacy/: report_orders.sql
