[project]
name = "dbt_migrator"
dynamic = ["version"]
description = "Migrate Legacy SQL codebase to dbt : automaticaly generate Lineage."
authors = [{ name = "LugolBis" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Repository = "https://github.com/LugolBis/dbt-migrator"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]
module-name = "dbt_migrator"
include = ["LICENSE", "README.md"]
